# Tetris-2023-2024

./: .gitignore  CMakeLists.txt  README.md  file.txt
include/: Tetramini.hpp  classifica.hpp  gioco.hpp  my_list.hpp
scripts/: setup_unix.sh.in  setup_windows.bat.in
src/: Tetramini.cpp  classifica.cpp  gioco.cpp  main.cpp  my_list.cpp  tetris
